Change header explanation

--- a/model_visualization_playground.ipynb
+++ b/model_visualization_playground.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Just a notebook for me to play around and look at possible analysis and visualizations to dive deeper into"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Visuallizations for the city data"
    ],
    "metadata": {}
