add correlation matrix

--- a/state_model_viz.ipynb
+++ b/state_model_viz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "source": [
     "from os import path\n",
     "import pandas as pd\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "state_dataset = pd.read_csv(path.join(DATA_DIR, 'state_dataset.csv'))\n",
     "state_dataset.head()"
@@ -132,14 +132,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
     "state_dataset[['climate_alliance']] = state_dataset[['climate_alliance']].astype(int)\n",
     "state_dataset[['is_democrat']] = (state_dataset[['governor_party']] == 'Democratic ').astype(int)\n",
@@ -249,14 +249,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "state_dataset.describe()"
    ],
@@ -363,7 +363,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 5
     }
    ],
    "metadata": {}
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "model = smf.ols(formula='CO2_per_capita ~ partisanship + climate_alliance + is_democrat', data = state_dataset)\n",
     "results = model.fit()\n",
@@ -400,8 +400,8 @@
       "Dep. Variable:         CO2_per_capita   R-squared:                       0.364\n",
       "Model:                            OLS   Adj. R-squared:                  0.322\n",
       "Method:                 Least Squares   F-statistic:                     8.771\n",
-      "Date:                Wed, 05 Jan 2022   Prob (F-statistic):           0.000104\n",
-      "Time:                        15:24:50   Log-Likelihood:                -203.29\n",
+      "Date:                Thu, 06 Jan 2022   Prob (F-statistic):           0.000104\n",
+      "Time:                        19:19:39   Log-Likelihood:                -203.29\n",
       "No. Observations:                  50   AIC:                             414.6\n",
       "Df Residuals:                      46   BIC:                             422.2\n",
       "Df Model:                           3                                         \n",
@@ -428,6 +428,31 @@
    "metadata": {
     "collapsed": true
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "corr_matrix = state_dataset.corr()\n",
+    "corr_matrix['CO2_per_capita'].sort_values(ascending = False)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "CO2_per_capita      1.000000\n",
+       "partisanship        0.577478\n",
+       "is_democrat        -0.292139\n",
+       "climate_alliance   -0.383814\n",
+       "Name: CO2_per_capita, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -925,6 +950,31 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "corr_matrix = state_dataset.corr()\n",
+    "corr_matrix['climate_alliance'].sort_values(ascending = False)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "climate_alliance    1.000000\n",
+       "is_democrat         0.800002\n",
+       "CO2_per_capita     -0.383814\n",
+       "partisanship       -0.805516\n",
+       "Name: climate_alliance, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### 2.1b: logistic"
@@ -1355,7 +1405,7 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('anaconda3': virtualenv)"
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
