added data and figures folder

--- a/city_model_viz.ipynb
+++ b/city_model_viz.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "source": [
     "from os import path\n",
     "import pandas as pd\n",
@@ -28,8 +28,8 @@
     "import statsmodels.formula.api as smf\n",
     "import statsmodels.api as sm\n",
     "from sklearn import linear_model\n",
-    "DATA_DIR = '/Users/joeskvarna/Desktop/Thesis/Data'\n",
-    "FIG_DIR = '/Users/joeskvarna/Desktop/Thesis/Figures/City/'"
+    "DATA_DIR = 'Data'\n",
+    "FIG_DIR = 'Figures/City/'"
    ],
    "outputs": [],
    "metadata": {}
@@ -1733,7 +1733,7 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('anaconda3': virtualenv)"
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
