--- a/state_model_viz.ipynb
+++ b/state_model_viz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "from os import path\n",
     "import pandas as pd\n",
@@ -14,8 +14,8 @@
     "import statsmodels.formula.api as smf\n",
     "import statsmodels.api as sm\n",
     "from sklearn import linear_model\n",
-    "DATA_DIR = '/Users/joeskvarna/Desktop/Thesis/Data'\n",
-    "FIG_DIR = '/Users/joeskvarna/Desktop/Thesis/Figures/State/'"
+    "DATA_DIR = 'Data'\n",
+    "FIG_DIR = 'Figures/State/'"
    ],
    "outputs": [],
    "metadata": {}
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "state_dataset = pd.read_csv(path.join(DATA_DIR, 'state_dataset.csv'))\n",
     "state_dataset.head()"
@@ -132,7 +132,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 2
     }
    ],
    "metadata": {}
